--- a/src/etl_weather/webui/templates/index.html
+++ b/src/etl_weather/webui/templates/index.html
@@ -22,8 +22,23 @@
           </div>
         </div>
         <div class="searchbox">
-          <input id="q" type="text" class="search-input" placeholder="Search city..." />
-          <button id="btn-search">Search</button>
+          <div class="search-container">
+            <div class="search-row">
+              <div class="search-group">
+                <input id="q" type="text" class="search-input" placeholder="Search city..." />
+                <button id="btn-search">Search</button>
+              </div>
+              <div class="search-divider">atau</div>
+              <div class="region-group">
+                <select id="province-select" class="region-select">
+                  <option value="">Pilih Provinsi...</option>
+                </select>
+                <select id="regency-select" class="region-select" disabled>
+                  <option value="">Pilih Kota/Kabupaten...</option>
+                </select>
+              </div>
+            </div>
+          </div>
           <ul id="results" class="search-results"></ul>
         </div>
         <nav class="nav">
